Ensure that buttons do not collapse in editor

--- a/assets/js/blocks/checkout/inner-blocks/checkout-shipping-method-block/style.scss
+++ b/assets/js/blocks/checkout/inner-blocks/checkout-shipping-method-block/style.scss
@@ -13,6 +13,7 @@
 	flex-direction: column;
 	justify-content: start;
 	align-items: center;
+	height: unset;
 	flex-basis: 0;
 	gap: 4px;
 	padding: 16px 12px;
